[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"
build = "build.rs"

[features]
alternatives = []

[dependencies]
itertools = "0.9.0"
parse-display = "0.4.0"
regex = "1.4.5"
lazy_static = "1.4.0"
ahash = "0.6.2"
lalrpop = "0.19.5"
lalrpop-util = "0.19.5"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[profile.bench]
debug = true

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "solutions"
harness = false

[[bench]]
name = "day1"
harness = false

[[bench]]
name = "day2"
harness = false

[[bench]]
name = "day4"
harness = false

[[bench]]
name = "day6"
harness = false

[[bench]]
name = "day11"
harness = false

[build-dependencies]
lalrpop = "0.19.5"
